tests/Fase2-Semantic/error/t09-same_name_for_a_var_and_array.ctds
class main {
	integer x;
	integer x[10];

	integer add(){
		x = x+1;
		return x;
	}

	void notmain(){
		x=0;
		add();
	}
	
}
